syntax = "proto3";

package serveralpha;

option go_package = "./proto;serveralpha";

// ------------------ Messages ------------------ //

message Location{
    float latitude = 1;
    float longitude = 2;
    int32 accuracy = 3;
}

message Author{
    string username = 1;
    string nickname = 2;
    string profilePictureURL = 3;
}

message Post{
    string postId = 1;
    Author author = 2;
    string creationDate = 3;
    string content = 4;
    uint32 likes = 5;
    uint32 liked = 6;
    Post repost = 7;
    Location location = 8;
}

message PostPagination{
    string last_post_id = 1;
    int32 limit = 2;
    int32 records = 3;
}

message Empty{}

// ------------------ Post Service ------------------ //

service PostService{
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc QueryPosts(Empty) returns (QueryPostsResponse);
    rpc DeletePost(Empty) returns (Empty);
    rpc GetFeed(GetFeedRequest) returns (QueryPostsResponse);
}

// ------------------ Request and Response ------------------ //

message CreatePostRequest{
    string content = 1;
    Location location = 2;
}

message QueryPostsResponse{
    repeated Post posts = 1;
    PostPagination pagination = 2;
}

message QueryPostsRequest{
    string last_post_id = 1;
    int32 limit = 2;
    string query = 3;
}

message GetFeedRequest{
    string last_post_id = 1;
    int32 limit = 2;
    bool is_authenticated = 3;
}

// ------------------ User Service ------------------ //

service UserService{
    rpc GetAuthor(GetAuthorRequest) returns (Author);
}

message GetAuthorRequest{
    string user_id = 1;
}
